# polaris

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  cspell.json  devenv.nix
.claude/: settings.json
.github/agents/: KernelDebugger.agent.md
.zed/: settings.json
crates/kernel/: Cargo.toml  build.rs  limine.conf  linker-x86_64.ld
crates/kernel/src/: acpi.rs  console.rs  framebuffer.rs  image.rs  interrupts.rs  lib.rs  main.rs  mem.rs  modules.rs  serial.rs  unwind.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/arch/x86_64/: acpi.rs  lapic.rs  mod.rs  paging.rs  timer.rs  unwind.rs
crates/kernel/src/arch/x86_64/interrupts/: handlers.rs  mod.rs
crates/pmm/: Cargo.toml
crates/pmm/src/: address.rs  address_space.rs  block_allocator.rs  frame.rs  human_address.rs  human_size.rs  lib.rs  memmap.rs  numbers.rs  page_directory.rs  physical_memory_manager.rs
crates/pmm/src/arch/: mod.rs
crates/pmm/src/arch/software/: entry.rs  flags.rs  mod.rs  table.rs
crates/pmm/src/arch/x86_64/: entry.rs  flags.rs  mod.rs  table.rs
crates/symbolicator/: Cargo.toml
crates/symbolicator/src/: lib.rs  main.rs
nix/: limine.nix  ovmf.nix
script/: extract-debug-symbols  targetSpec.schema.json
script/targets/: x86_64-polaris-kernel.json
